<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:drawableStart="@drawable/ic_live_help_black_24dp"
        android:text="@string/appInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="5dp"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:drawableStart="@drawable/ic_build_black_24dp"
        android:text="@string/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:drawableStart="@drawable/ic_security_black_24dp"
        android:text="@string/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:drawableStart="@drawable/ic_public_black_24dp"
        android:text="@string/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:drawableStart="@drawable/ic_assignment_ind_black_24dp"
            android:text="@string/developerIntroduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <com.example.registration.CircleImageView
                        android:src="@drawable/ic_person_black_24dp"
                        android:id="@+id/imageView1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerName1"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerMajor1"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerEmail1"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <com.example.registration.CircleImageView
                        android:src="@drawable/ic_person_black_24dp"
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerName2"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerMajor2"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerEmail2"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <com.example.registration.CircleImageView
                        android:src="@drawable/ic_person_black_24dp"
                        android:id="@+id/imageView3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerName3"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerMajor3"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerEmail3"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <com.example.registration.CircleImageView
                        android:src="@drawable/ic_person_black_24dp"
                        android:id="@+id/imageView4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerName4"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerMajor4"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developerEmail4"
                            android:textColor="#000000"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>