<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.solid.RegisterActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registration"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <EditText
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    android:inputType="text"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:id="@+id/idText"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorPrimary"/>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@color/colorWarning"
                    android:text="@string/confirmOverlap"
                    android:layout_gravity="center"
                    android:id="@+id/validateButton"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <EditText
                android:importantForAutofill="no"
                tools:targetApi="o"
                android:inputType="textPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id="@+id/passwordText"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>

            <EditText
                android:importantForAutofill="no"
                tools:targetApi="o"
                android:inputType="textEmailAddress"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id="@+id/emailText"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>

            <RadioGroup
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/genderGroup"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/genderWomen"
                    android:layout_weight="1"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/genderMan"
                    android:layout_weight="1"/>

            </RadioGroup>

            <Spinner
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/majorSpinner"/>

            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"
                android:text="@string/signUp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/registerButton"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>